--- a/sunsama-frontend/src/pages/home/homepage.css
+++ b/sunsama-frontend/src/pages/home/homepage.css
@@ -380,7 +380,20 @@ body {
   font-size: 22px;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.6)
 }
+.progress-container {
+  position: relative;
+  width: 100%;
+  height: 12px;
+  background-color: #e5e7eb; /* hellgrau */
+  border-radius: 6px;
+  overflow: hidden;
+}
 
+.progress-fill {
+  height: 100%;
+  background-color: #76ABAE; /* blau */
+  transition: width 0.3s ease;
+}
 /* small responsive tweaks */
 @media (max-width:1000px) {
   .calendar-pane {
